@@ -12,11 +12,6 @@ pkg-history.txt
 # installed by dh_installchangelogs
 NVIDIA_Changelog
 
-# built from src:nvidia-cuda-mps
-nvidia-cuda-mps-control
-nvidia-cuda-mps-control.1
-nvidia-cuda-mps-server
-
 # built from src:nvidia-modprobe
 nvidia-modprobe
 nvidia-modprobe.1
@@ -54,6 +49,11 @@ libGLESv2.so.2.1.0
 libGLX.so.0
 libGLdispatch.so.0
 libOpenGL.so.0
+
+# shipped unversioned by src:nvidia-graphics-drivers-tesla-${latest}
+nvidia-cuda-mps-control
+nvidia-cuda-mps-control.1
+nvidia-cuda-mps-server
 
 # not shipped
 
